[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-es"
version = "0.0.2"
description = ""
readme = ""
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "black",
  "gymnasium[all,accept-rom-license]==0.26.3",
  "gymnasium[atari]==0.26.3",
  "gymnasium[box2d]==0.26.3",
  "gymnasium[mujoco]==0.26.3",
  "mujoco==2.2.0",
  "matplotlib",
  "moviepy",
  "numpy",
  "pandas",
  "scikit-image",
  "scipy",
  "Cython<3"
]