[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-es"
version = "0.0.2"
description = ""
readme = ""
requires-python = ">=3.10" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "black",
  "gymnasium[all,accept-rom-license]==0.29.1",
  "lmmaes>=0.3,<0.4",
  "matplotlib",
  "moviepy",
  "numpy",
  "pandas",
  "scikit-image",
  "scipy",
  "Cython<3"
]